# Syncop

./: .clang-format  CMakeLists.txt
commands/: build.bat  buildDLL.bat  buildTime.bat  compile_shader.bat  time.bat
remedy/: rem.rdbg
res/shaders/: shader.frag  shader.vert
src/: event.h  game.c  game.h  main.c  region.c  region.h  sy_windows.h  tile_map.h  utils.c  utils.h  vulkan.c  vulkan.h
src/math/: syn_math.c  syn_math.h
